# mesh-healer

./: .gitignore  README.md  build_advanced_backends.ps1  mesh_heal.py  mesh_heal_gui.py  requirements.txt
advanced_backends/cgal_alpha_wrap/: CMakeLists.txt
advanced_backends/cgal_alpha_wrap/src/: main.cpp
samples/: DG01A_May2026_from_msh_report.json  DG01A_May2026_report.json  boolean_clip.stl  boolean_clip_report.json  boolean_intersection.stl  boolean_intersection_report.json  boolean_right.stl  boolean_union.stl  boolean_union_report.json
tests/: test_surface_shell.py
